--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 
 		<dependency>
 			<groupId>com.baomidou</groupId>
-			<artifactId>mybatis-plus</artifactId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
 			<version>3.5.3.1</version>
 		</dependency>
 		<dependency>
@@ -67,6 +67,38 @@
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
 		</dependency>
+
+		<!-- sa-token -->
+		<dependency>
+			<groupId>cn.dev33</groupId>
+			<artifactId>sa-token-spring-boot3-starter</artifactId>
+			<version>1.34.0</version>
+		</dependency>
+		<!-- sa-token 整合 redis （使用jackson序列化方式） -->
+		<dependency>
+			<groupId>cn.dev33</groupId>
+			<artifactId>sa-token-dao-redis-jackson</artifactId>
+			<version>1.34.0</version>
+		</dependency>
+<!--		&lt;!&ndash; Sa-Token插件：权限缓存与业务缓存分离 &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>cn.dev33</groupId>-->
+<!--			<artifactId>sa-token-alone-redis</artifactId>-->
+<!--			<version>1.34.0</version>-->
+<!--		</dependency>-->
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.2.15</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.xiaoymin</groupId>
+			<artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+			<version>4.1.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
